--- a/zero.html
+++ b/zero.html
@@ -28,7 +28,9 @@
 
                 </li>
                 <li>
-
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit explicabo quaerat eligendi quam,
+                    laborum vitae quidem neque voluptatibus suscipit, laudantium provident laboriosam, molestiae quos
+                    dolores aliquid? Quis reprehenderit laudantium minima!
                 </li>
             </main>
         </strong>
