--- a/zero.html
+++ b/zero.html
@@ -22,7 +22,9 @@
         libero tempora eius nostrum id totam aut repellat, ad assumenda veritatis quasi modi laboriosam.
     </nav>
     <div>
+        <strong>
 
+        </strong>
     </div>
 </body>
 
